--- a/package.json
+++ b/package.json
@@ -53,10 +53,14 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^6.3.0",
+    "redux-immutable": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -69,6 +73,7 @@
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-immutable": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "clean-webpack-plugin": "^4.0.0",
