--- a/package.json
+++ b/package.json
@@ -65,26 +65,23 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.12",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^28.1.2",
+    "@types/enzyme": "^3.10.11",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.182",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-test-renderer": "^18.0.0",
     "@types/redux-immutable": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^7.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
     "esbuild-loader": "^2.19.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.5.0",
@@ -98,8 +95,9 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "inject-html-webpack-plugin": "^1.0.1",
-    "jest": "^28.1.1",
+    "jest": "^27.4.7",
     "jest-transform-stub": "^2.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
