--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
     "lib": ["es5", "es6", "dom", "dom.iterable"],
     "baseUrl": ".",
     "paths": {
